--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Log In</mat-card-title>
+    <mat-card-title></mat-card-title>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Email</mat-label>
@@ -16,6 +16,10 @@
       </mat-form-field>
   
       <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Log In</button>
+      <div class="social-buttons">
+        <app-google-button></app-google-button>
+        <app-fb-button></app-fb-button>
+      </div>
     </form>
   </mat-card>
   
